--- a/PlatziHawai/css/index.css
+++ b/PlatziHawai/css/index.css
@@ -32,6 +32,10 @@
     height: 100%;
 }
 
+.badges {
+    text-align: right;
+    position: relative;
+}
 .btn-platzi {
     background-color: #97c93e;
     color: white !important;
@@ -39,6 +43,16 @@
 
 .btn-platzi:hover {
     background-color: #7ba229;
+}
+
+#place-time img {
+    max-width: 100%;
+}
+
+#place-time {
+    background-color: #343a40;
+    color: white;
+    
 }
 
 #footer{
